Ported to JDK 17